vertical spacing fix

--- a/public/css/internal.less
+++ b/public/css/internal.less
@@ -56,7 +56,10 @@
 
 #content {
   .column(14);
-  padding-top: 1.5em;
+  
+  h3 {
+    padding-top: 0.9em;
+  }
 }
 
 /* Following
